--- a/app/views/courses/1/_course_resource.html.erb
+++ b/app/views/courses/1/_course_resource.html.erb
@@ -3,41 +3,16 @@
 <ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">教学大纲</dt></div>
   <li class="col-sm-12">
-    <a href= "#" class="col-sm-10">《 iOS 图形界面开发》教学大纲</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href= "http://zh.zj-xx.cn/1byob.html" class="col-sm-10" target="_blank">《 iOS 图形界面开发》教学大纲</a>
+    <a href= "http://zh.zj-xx.cn/1byob.html" class="col-sm-2" target="_blank"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  </ul>
-  <br><br>
+</ul>
+<br><br>
 
-  <ul class="container-fluid">
+<ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">考核方法</dt></div>
   <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">考核方法</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  </ul>
-  <br><br>
-
- <ul class="container-fluid">
-  <div class="col-sm-12"><dt class="col-sm-12">电子教案</dt></div>
-  <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">项目一 初识 iOS</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">项目二 利用 http 协议从微博服务器获取</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">项目三 利用 html 协议实现登陆微博的功能</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">项目四 主页列表功能界面设计</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">项目五 sqlite 数据库缓存功能介绍</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="http://zh.zj-xx.cn/1byn1.html" class="col-sm-10" target="_blank">考核方法</a>
+    <a href="http://zh.zj-xx.cn/1byn1.html" class="col-sm-2" target="_blank"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
 </ul>
