--- a/app/views/courses/1/_teach_data.html.erb
+++ b/app/views/courses/1/_teach_data.html.erb
@@ -1,17 +1,7 @@
 <ul class="container-fluid">
-    <div class="col-sm-12"><dd class="col-sm-12">教学录像</dd></div>
-    <% (0..2).each do |index|%>
-    <li class="col-sm-12">
-      <a href= "#" class="col-sm-10">ios图形界面的应用</a>
-      <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-    </li>
-    <% end %>
-  </ul>
-  <br><br>
   <ul class="container-fluid">
-    <div class="col-sm-12"><dd class="col-sm-12">申报表</dd></div>
     <li class="col-sm-12">
-      <a pef= "#" class="col-sm-10">ios图形界面开发精品课程申报表</a>
-      <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+      <a href= "http://zh.zj-xx.cn/1bynv.html" class="col-sm-10" target="_blank">ios图形界面开发精品课程申报表</a>
+      <a href= "http://zh.zj-xx.cn/1bynv.html" class="col-sm-2" target="_blank"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
     </li>
   </ul>
