--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -3,16 +3,16 @@
     <span class="pull-left">考试中心</span>
   </section>
 
-  <ul class="nav nav-pills discuss-menu">
-    <li class="active"><%= link_to("即将开始", "#") %></li>
-    <li><%= link_to("正在进行", "#") %></li>
-    <li><%= link_to("已结束", "#") %></li>
+  <ul id="examListMenu" class="nav nav-pills discuss-menu">
+    <li class="active"><%= link_to("即将开始", "javascript:void(0);") %></li>
+    <li><%= link_to("正在进行", "javascript:void(0);") %></li>
+    <li><%= link_to("已结束", "javascript:void(0);") %></li>
     <li class="navbar-right create-discuss">
       <a id="newCreateBtn" href="javascript:void(0);"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建考试</a>
     </li>
   </ul>
 
-  <div id="examList" class="exams-list">
+  <div class="exams-list">
     <table class="table table-bordered">
       <tr>
         <th>系别</th>
@@ -20,6 +20,7 @@
         <th>考试科目</th>
         <th>考试内容</th>
         <th>考试时间</th>
+        <th>考试人数</th>
         <th>编辑</th>
       </tr>
       <% (1..10).each do |i| %>
@@ -29,6 +30,57 @@
         <td>计算机信息技术期末考试</td>
         <td>计算机信息技术期末考试考试内容</td>
         <td>2015-06-17至2015-06-22</td>
+        <td align="center">40</td>
+        <td align="center">
+          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+
+  <div class="exams-list" style="display: none;">
+    <table class="table table-bordered">
+      <tr>
+        <th>系别</th>
+        <th>专业</th>
+        <th>考试科目</th>
+        <th>考试内容</th>
+        <th>考试时间</th>
+        <th>考试人数</th>
+      </tr>
+      <% (1..10).each do |i| %>
+      <tr>
+        <td>计算机信息系</td>
+        <td>计算机科学与技术</td>
+        <td>计算机信息技术期末考试</td>
+        <td>计算机信息技术期末考试考试内容</td>
+        <td>2015-06-17至2015-06-22</td>
+        <td align="center">20/40</td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+
+  <div class="exams-list" style="display: none;">
+    <table class="table table-bordered">
+      <tr>
+        <th>系别</th>
+        <th>专业</th>
+        <th>考试科目</th>
+        <th>考试内容</th>
+        <th>考试时间</th>
+        <th>考试人数</th>
+        <th>阅卷</th>
+      </tr>
+      <% (1..10).each do |i| %>
+      <tr>
+        <td>计算机信息系</td>
+        <td>计算机科学与技术</td>
+        <td>计算机信息技术期末考试</td>
+        <td>计算机信息技术期末考试考试内容</td>
+        <td>2015-06-17至2015-06-22</td>
+        <td>40/40</td>
         <td align="center"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></td>
       </tr>
       <% end %>
@@ -117,6 +169,18 @@
   $(function(){
     $("#newCreateBtn").click(function(){
       $("#createDiscuss").modal();
+    });
+
+    $(".editExamLink").click(function(){
+      $("#createDiscuss").modal();
+    });
+
+    $("#examListMenu li").click(function(){
+      if($(this).index() < 3){
+        $(this).addClass("active").siblings().removeClass("active")
+        $(".exams-list").hide();
+        $(".exams-list").eq($(this).index()).show();
+      }
     });
   });
 </script>
