--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -81,7 +81,9 @@
         <td>计算机信息技术期末考试考试内容</td>
         <td>2015-06-17至2015-06-22</td>
         <td>40/40</td>
-        <td align="center"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></td>
+        <td align="center">
+          <a href="#"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+        </td>
       </tr>
       <% end %>
     </table>
