--- a/app/views/admin/sub_courses/_form.html.erb
+++ b/app/views/admin/sub_courses/_form.html.erb
@@ -6,13 +6,14 @@
       <%= f.text_field :name, class: 'form-control' %>
     </div>
   </div>
-
-  <div class="form-group">
-    <%= label :attachment_tag, '已传课件', class: 'col-sm-2 control-label' %>
-    <div class="col-sm-8">
-      <div style="width: 100%; height: 400px; overflow: hidden; background: #fff;" ><%= pdfjs_viewer pdf_url: @sub_course.attachment.content.url, style: :full %></div>
+  <% if @sub_course.attachment.present? %>
+    <div class="form-group">
+      <%= label :attachment_tag, '已传课件', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-8">
+        <div style="width: 100%; height: 400px; overflow: hidden; background: #fff;" ><%= pdfjs_viewer pdf_url: @sub_course.attachment.content.url, style: :full %></div>
+      </div>
     </div>
-  </div>
+  <% end %>
 
   <div class="form-group">
     <%= f.label :attachment, '课件上传', class: 'col-sm-2 control-label' %>
