--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -9,7 +9,7 @@
     <%= label_tag :grades, '所教班级', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
       <% Grade.all.each do |grade| %>
-        <%= check_box_tag("teacher[grade_ids][]", grade.id, grade.id.in?(@teacher.grades.collect(&:id)), required: true)%>
+        <%= check_box_tag("teacher[grade_ids][]", grade.id, grade.id.in?(@teacher.grades.collect(&:id)))%>
         (<%= grade.try(:specialty).try(:name) %>)<%= grade.name%>
       <%end%>
     </div>
@@ -49,13 +49,13 @@
    <div class="form-group">
     <%= f.label :password, '密码', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
-      <%= f.password_field :password, class: 'form-control', required: true %>
+      <%= f.password_field :password, class: 'form-control' %>
     </div>
   </div>
    <div class="form-group">
     <%= f.label :password_confirmation, '确认密码', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
-      <%= f.password_field :password_confirmation, class: 'form-control', required: true %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
