--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -7,9 +7,9 @@
     <li class="active"><%= link_to("即将开始", "javascript:void(0);") %></li>
     <li><%= link_to("正在进行", "javascript:void(0);") %></li>
     <li><%= link_to("已结束", "javascript:void(0);") %></li>
-    <li class="navbar-right create-discuss">
+   <!--  <li class="navbar-right create-discuss">
       <a id="newCreateBtn" href="javascript:void(0);"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建考试</a>
-    </li>
+    </li> -->
   </ul>
   <br>
   <div class="exams-list">
@@ -21,21 +21,55 @@
         <th>考试内容</th>
         <th>考试时间</th>
         <th>考试人数</th>
-        <th>编辑</th>
+        <!-- <th>编辑</th> -->
       </tr>
-      <% (1..10).each do |i| %>
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
         <td>计算机信息技术期末考试</td>
         <td>计算机信息技术期末考试考试内容</td>
-        <td>2015-06-17至2015-06-22</td>
+        <td>2015-07-18至2015-07-22</td>
         <td align="center">40</td>
+        <!-- <td align="center">
+          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+        </td> -->
+      </tr>
+      <tr>
+        <td>计算机信息系</td>
+        <td>计算机科学与技术</td>
+        <td>IOS期末考试</td>
+        <td>IOS期末考试内容IOS期末考试内容IOS期末考试内容</td>
+        <td>2015-07-28至2015-07-30</td>
+        <td align="center">40</td>
+        <!-- <td align="center">
+          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+        </td> -->
+      </tr>
+    </table>
+  </div>
+
+  <div class="exams-list" style="display: none;">
+    <table class="table table-bordered">
+      <tr>
+        <th>系别</th>
+        <th>专业</th>
+        <th>考试科目</th>
+        <th>考试内容</th>
+        <th>考试时间</th>
+        <th>考试人数</th>
+        <th>进入考试</th>
+      </tr>
+      <tr>
+        <td>计算机信息系</td>
+        <td>计算机科学与技术</td>
+        <td>JAVA语言基础期末考试</td>
+        <td>JAVA语言基础期末考试</td>
+        <td>2015-07-08至2015-07-10</td>
+        <td align="center">20/40</td>
         <td align="center">
           <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
         </td>
       </tr>
-      <% end %>
     </table>
   </div>
 
@@ -48,30 +82,7 @@
         <th>考试内容</th>
         <th>考试时间</th>
         <th>考试人数</th>
-      </tr>
-      <% (1..10).each do |i| %>
-      <tr>
-        <td>计算机信息系</td>
-        <td>计算机科学与技术</td>
-        <td>计算机信息技术期末考试</td>
-        <td>计算机信息技术期末考试考试内容</td>
-        <td>2015-06-17至2015-06-22</td>
-        <td align="center">20/40</td>
-      </tr>
-      <% end %>
-    </table>
-  </div>
-
-  <div class="exams-list" style="display: none;">
-    <table class="table table-bordered">
-      <tr>
-        <th>系别</th>
-        <th>专业</th>
-        <th>考试科目</th>
-        <th>考试内容</th>
-        <th>考试时间</th>
-        <th>考试人数</th>
-        <th>阅卷</th>
+        <th>查看试卷</th>
       </tr>
       <% (1..10).each do |i| %>
       <tr>
