--- a/app/views/courses/1/_main.html.erb
+++ b/app/views/courses/1/_main.html.erb
@@ -21,7 +21,7 @@
     <%= render partial: "courses/1/course_setup", locals: {course: @course} %>
   </div>
   <div class="text-content">
-    <%= render partial: "courses/1/course_team", locals: {course: @course} %>
+    <%= render partial: "courses/1/course_team", locals: {teacher_courses: teacher_courses} %>
   </div>
   <div class="text-content">
     <%= render partial: "courses/1/course_condition", locals: {course: @course} %>
