--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -95,8 +95,8 @@
     <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
   </div>
   <% if @course.id == 1 %>
-    <%= render "courses/1/main" %>
+    <%= render partial: "courses/1/main", locals: {teacher_courses: @teacher_courses} %>
   <% elsif  @course.id == 2 %>
-    <%= render partial: "courses/2/main" %>
+    <%= render partial: "courses/2/main", locals: {teacher_courses: @teacher_courses} %>
   <% end %>
 </div>
