--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,7 +12,7 @@
     <%end%>
     <div class="col-xs-3 pull-right">
       <div class="form-group">
-        <%= render partial: 'admin/common/keyword', locals: {path: ""} %>
+        <%= render partial: 'admin/common/keyword', locals: {path: admin_users_path} %>
       </div>
     </div>
   </div>
