--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -858,7 +858,7 @@ body.courses__show, body.courses__after_class {
 	}
 }
 /*考试页面*/
-body.exams__new, body.exams__show {
+body.exams__new, body.exams__show, body.exams__test_new,  body.exams__show_test {
 	.main-content {
 		padding: 20px 40px;
 		background: #fff;
