--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -67,7 +67,7 @@
         <td>2015-07-08至2015-07-10</td>
         <td align="center">20/40</td>
         <td align="center">
-          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+          <a href="<%= test_new_exams_path %>"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
         </td>
       </tr>
     </table>
@@ -88,12 +88,12 @@
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
-        <td>计算机信息技术期末考试</td>
-        <td>计算机信息技术期末考试考试内容</td>
+        <td>计算机组成原理期末考试</td>
+        <td>计算机组成原理期末考试内容</td>
         <td>2015-06-17至2015-06-22</td>
         <td>40/40</td>
         <td align="center">
-          <a href="#"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+          <a href="<%= show_test_exams_path %>"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
         </td>
       </tr>
       <% end %>
