--- a/app/views/admin/sub_courses/_form.html.erb
+++ b/app/views/admin/sub_courses/_form.html.erb
@@ -22,6 +22,18 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= label_tag :or, '或者', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4 container">
+    </div>
+  </div>
+  <div class="form-group">
+    <%= label_tag :attachment_file_url, '课程附件[地址]', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4 container">
+      <%= text_field_tag :attachment_file_url, nil, class: 'form-control'%>
+    </div>
+  </div>
+
   <hr></hr>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
