--- a/app/views/courses/_sub_course.html.erb
+++ b/app/views/courses/_sub_course.html.erb
@@ -4,9 +4,11 @@
         <!-- 如果是视频如mp4, flv等格式文件进入播放页 -->
       <%= link_to show_sub_courses_path(number: sub_course.number, course_number: @course.number) do %>
         <span class="title"><%= sub_course.name %></span>
-        <span class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></span>
-        <!-- 显示文件大小 -->
-        <span class="already">（文件<%= sub_course.count_file_size%>）</span>
+        <% unless sub_course.attachment && sub_course.attachment.file_url.present? %>
+          <span class="total">格式<%= file_format(sub_course.attachment.content_file_name)%></span>
+          <!-- 显示文件大小 -->
+          <span class="already">（文件<%= sub_course.count_file_size%>）</span>
+        <% end %>
       <%end%>
     </li>
     <!-- 如果是视频如pdf, docx等格式文件执行下载 -->
