--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,11 +23,15 @@
 
     <div class="left-content">
       <div class="course-image">
-        <video width="500" height="350" class="mejs-player" poster="<%= (@course.attachment.content.url(:c_500_350))%>" controls="controls" preload="none">
-          <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
-          <source type="video/webm" src="myvideo.webm" />
-          <source type="video/ogg" src="myvideo.ogv" />
-        </video>
+        <% if @course.attachment && @course.attachment.content.present? %>
+          <video width="500" height="350" class="mejs-player" poster="<%= (@course.attachment.content.url(:c_500_350))%>" controls="controls" preload="none">
+            <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
+          </video>
+        <% else %>
+          <video width="500" height="350" class="mejs-player" controls="controls" preload="none">
+            <source type="video/mp4" src="<%= @course.attachment.file_url %>" />
+          </video>
+        <% end %>
       </div>
       <div class="course-and-score">
         <%= link_to "课后作业", after_class_courses_path, class: "course"%>
