--- a/app/views/courses/1/_course_data.html.erb
+++ b/app/views/courses/1/_course_data.html.erb
@@ -2,6 +2,6 @@
 <ul class="container-fluid">
   <li class="col-sm-12">
     <a href="http://zh.zj-xx.cn/1bynv.html" class="col-sm-10" target="_blank">ios图形界面开发精品课程申报表</a>
-    <a href="http://zh.zj-xx.cn/1bynv.html" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="http://zh.zj-xx.cn/1bynv.html" class="col-sm-2" target="_blank"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
 </ul>
