--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,7 +1,11 @@
 <div class='single-vedio-content'>
   <div class="vedio-content">
     <div class="image-wrapper">
+      <% if course.attachment.present? && course.attachment.file_url.present? %>
+      <%= link_to image_tag("course-show.png"), show_courses_path(course.number), class: 'img' if course.attachment%>
+     <% else %>
       <%= link_to image_tag(course.attachment.content.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.attachment%>
+    <% end %>
     </div>
     <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
     <p class="description">
