--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -24,7 +24,7 @@
     <div class="left-content">
       <div class="course-image">
         <% if @course.attachment && @course.attachment.content.present? %>
-          <video width="500" height="350" class="mejs-player" poster="<%= (@course.attachment.content.url(:c_500_350))%>" controls="controls" preload="none">
+          <video width="500" height="350" class="mejs-player" poster="<%= (@course.try(:image).try(:avatar).url(:c_500_350))%>" controls="controls" preload="none">
             <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
           </video>
         <% else %>
