fix according to teacher

--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -128,7 +128,7 @@ body.home__index, body.teachers__index{
 	.panel-bg {
 		font-size: 18px;
 		color: #fff;
-		background: #9abce1;
+		background: #1a5aa0;
 	}
 	.star-course {
 		width: 100%;
