--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,7 +72,7 @@
     <%end%>
   </div>
   <section class="common-title">
-    <span class="pull-left">明星课程</span>
+    <span class="pull-left">热门课程</span>
     <!-- <span class="pull-right"><%= link_to "更多", "#", class: "more" %></span> -->
   </section>
   <div class="col-sm-12 col-xs-12 col-md-12">
