--- a/app/views/teachers/show_grade_score.html.erb
+++ b/app/views/teachers/show_grade_score.html.erb
@@ -9,207 +9,11 @@
       <a href="javascript:void(0)" class="btn btn-primary">教师查阅</a>
       <div class="main-title">网络设备维护基础（一）测试</div>
     </div>
-  
+
   <div id="everyGradeScore" class="grade-picture">
     <div class="average-score row">
-      <div class="sub-title"><span class="badge">1</span>xx班xx课的题目错误率统计图</div>
+      <div class="sub-title"><span class="badge">1</span>该课程题目错误率统计图</div>
         <div id="wrongPercentage" class="col-sm-11"></div>
-    </div>
-
-    <div class="score-percentage">
-      <div class="sub-title"><span class="badge">2</span>xx班xx课成绩的统计表</div>
-      <div class="col-sm-12 grade-score-table">
-        <table class="table table-bordered student-score-list" >
-        <tr class="info">
-          <th>学号</th>
-          <th>姓名</th>
-          <th>成绩</th>
-          <th>01</th>
-          <th>02</th>
-          <th>03</th>
-          <th>04</th>
-          <th>05</th>
-          <th>06</th>
-          <th>07</th>
-          <th>08</th>
-          <th>09</th>
-          <th>10</th>
-          <th>11</th>
-          <th>12</th>
-          <th>13</th>
-          <th>14</th>
-          <th>15</th>
-          <th>16</th>
-          <th>17</th>
-          <th>18</th>
-          <th>19</th>
-          <th>20</th>
-          <th>等级</th>
-        </tr>
-
-        <tr>
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td class="text-danger">A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-
-        <tr class="success">
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-
-        <tr>
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td class="text-danger">A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-
-        <tr class="success">
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-
-        <tr>
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td class="text-danger">A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-
-        <tr class="success">
-          <td>20150012</td>
-          <td>吴琼</td>
-          <td>96</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>A</td>
-          <td>D</td>
-          <td>C</td>
-          <td>B</td>
-          <td>A</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>B</td>
-          <td>D</td>
-          <td>C</td>
-          <td>A</td>
-          <td>A</td>
-          <td>C</td>
-          <td>D</td>
-          <td>B</td>
-          <td>C</td>
-          <td>优秀</td>
-        </tr>
-      </table>
-      </div>
     </div>
 
     <div class="search-score-btn">
@@ -217,7 +21,7 @@
       <%=link_to "返回首页", root_path, class: "btn btn-danger btn-lg" %>
     </div>
   </div>
-  
+
   </div>
 </div>
 
