--- a/app/views/admin/academies/index.html.erb
+++ b/app/views/admin/academies/index.html.erb
@@ -23,7 +23,7 @@
   <thead>
     <tr>
       <th class="text-center">学校名称</th>
-      <th class="text-center">学院名称</th>
+      <th class="text-center">学院（系部）名称</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
   </thead>
