--- a/app/views/teachers/show_score.html.erb
+++ b/app/views/teachers/show_score.html.erb
@@ -21,7 +21,7 @@
 		</div>
 
 		<div class="score-percentage">
-		  <div class="sub-title"><span class="badge">2</span>每个班xx课程的分数段分布概率统计图</div>
+		  <div class="sub-title"><span class="badge">2</span>每个班的分数段分布概率统计图</div>
 
 		  <div class="row">
 		  	<div class="col-sm-4 score-percentage-picture"></div>
