--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -1,5 +1,5 @@
 /*课程中心*/
-body.courses__index {
+body.courses__index, body.courses__learning_center, body.teachers__index {
   section.common-title {
     height: 60px;
     line-height: 60px;
@@ -100,6 +100,5 @@ body.courses__index {
         }
       }
     }
-    
   }
 }
