--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -26,6 +26,7 @@
 			<th class="text-center">编号</th>
 			<th class="text-center">名称</th>
 			<th class="text-center">描述</th>
+      <th class="text-center">精品课程</th>
       <th class="text-center">子课程</th>
 			<th class="text-center" colspan="3">操作</th>
 		</tr>
