--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,14 +1,14 @@
 <div class='single-vedio-content'>
   <div class="vedio-content">
     <div class="image-wrapper" style="
-    height: 225px;">
+    height: 200px; overflow: hidden;">
       <% if course.attachment.present? && course.attachment.file_url.present? %>
-      <%= link_to image_tag("course-show.png"), show_courses_path(course.number), class: 'img', style: "height: 192px" if course.attachment%>
+      <%= link_to image_tag("course-show.png"), show_courses_path(course.number), class: 'img', style: "height: 200px" if course.attachment%>
      <% else %>
-      <%= link_to image_tag(course.attachment.content.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.attachment%>
+      <%= link_to image_tag(course.try(:image).try(:avatar).url(:c_500_350)), show_courses_path(course.number), class: 'img' if course.attachment%>
     <% end %>
     </div>
-    <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+    <p class="title"><%= link_to truncate(course.name, length: 26), show_courses_path(course.number) %></p>
     <p class="description">
       <span class="pull-left section">
         <span>该课程一共有<%= course.try(:sub_courses).try(:size)%>课时</span>
