--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,7 +88,7 @@
           </div>
           <div class="col-sm-12 course-description">
             <p class="description">
-              <span class="pull-left section"><%= link_to course.name, show_courses_path(course.number) %></span>
+              <span class="pull-left section"><%= link_to truncate(course.name, length: 10), show_courses_path(course.number) %></span>
               <span class="pull-right">
                 <span class="glyphicon glyphicon-star"></span>
                 <%= course.get_likes(vote_scope: "collect").size %>人收藏
