--- a/app/views/admin/academies/_academy.html.erb
+++ b/app/views/admin/academies/_academy.html.erb
@@ -2,9 +2,9 @@
   <td><%= academy.try(:school).name %></td>
   <td><%= academy.name %></td>
   <td>
-    <%= link_to [:admin, academy], class: 'btn btn-xs btn-info', title: '查看' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
-    <%end%>
+    <%#= link_to [:admin, academy], class: 'btn btn-xs btn-info', title: '查看' do %>
+      <!-- <span class="glyphicon glyphicon-eye-open"></span>
+    <%#end%> -->
     <%= link_to edit_admin_academy_path(academy), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-edit"></span>
     <%end%>
