--- a/app/views/admin/courses/_course.html.erb
+++ b/app/views/admin/courses/_course.html.erb
@@ -12,13 +12,13 @@
   <td><%= course.excellented ? "是" : "否" %></td>
   <td><%= link_to "子课程", admin_course_sub_courses_path(course)%></td>
   <td>
-    <%= link_to [:admin, course], class: 'btn btn-xs btn-info', title: '查看' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
-    <%end%>
+    <%#= link_to [:admin, course], class: 'btn btn-xs btn-info', title: '查看' do %>
+      <!-- <span class="glyphicon glyphicon-eye-open"></span> -->
+    <%#end%>
     <%= link_to edit_admin_course_path(course), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-edit"></span>
     <%end%>
-    <%= link_to nil, class: 'btn btn-xs btn-danger', title: '删除' do %>
+    <%= link_to admin_course_path(course), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
       <span class="glyphicon glyphicon-trash"></span>
     <%end%>
   </td>
