--- a/app/views/admin/specialties/_specialty.html.erb
+++ b/app/views/admin/specialties/_specialty.html.erb
@@ -4,9 +4,9 @@
   <td><%= specialty.try(:academy).try(:name) %></td>
   <td><%= specialty.code %></td>
   <td>
-    <%= link_to [:admin, specialty], class: 'btn btn-xs btn-info', title: '查看' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
-    <%end%>
+    <%#= link_to [:admin, specialty], class: 'btn btn-xs btn-info', title: '查看' do %>
+     <!--  <span class="glyphicon glyphicon-eye-open"></span> -->
+    <%#end%>
     <%= link_to edit_admin_specialty_path(specialty), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-edit"></span>
     <%end%>
