--- a/app/views/courses/learning_center.html.erb
+++ b/app/views/courses/learning_center.html.erb
@@ -3,7 +3,7 @@
 <%end%>
 <div class="main-content">
   <section class="common-title">
-    <span class="pull-left">课程中心</span>
+    <span class="pull-left">学习中心</span>
   </section>
   <div class="panel panel-default">
     <div class="panel-body">
