admin teacher password

--- a/app/views/admin/common/_header.html.erb
+++ b/app/views/admin/common/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-inverse" role="navigation">
     <p class="navbar-text">
       <%= link_to admin_root_path do %>
-       <span class="glyphicon glyphicon-home"></span> 上海工商技术学院后台管理系统
+       <span class="glyphicon glyphicon-home"></span> 上海工商职业技术学院后台管理系统
       <% end %>
     </p>
     <ul class="nav navbar-nav navbar-right">
