--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,7 +101,7 @@
   </div>
   <div class="col-sm-12 col-xs-12 col-md-12">
     <div class="col-sm-6 col-xs-6 col-md-6 col-sm-offset-3 margin-tb">
-      <%= link_to "开始学习", courses_path, class: "btn btn-lg btn-primary center-block"%>
+      <%= link_to "开始学习", courses_learning_center_path, class: "btn btn-lg btn-primary center-block"%>
     </div>
   </div>
 </div>
