finish admin categories

--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -25,5 +25,10 @@
         <span class="glyphicon glyphicon-th-list"></span> 专业列表
       <%end%>
     </li>
+    <li>
+      <%= link_to admin_categories_path do %>
+        <span class="glyphicon glyphicon-th-list"></span> 章节分类
+      <%end%>
+    </li>
   </ul>
 </div>
